[package]
name = "rust_graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_graph"
crate-type = ["cdylib"]

[dependencies]
petgraph = "0.6.0"
pyo3 = { version = "0.15", features = ["extension-module"] }
